--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
     <div class="container">
         <div class="col-12 bg-dark  blo">
             <div class="row">
-                <div class="col-4  A"> <a href="https://iwin888.com/"><img src="./img/logo/logo.png" alt=""></a></div>
-                <div class="col-8 B d-flex ">
-                    <ul class="ul ">
-                        <li><a href="https://iwin888.com/https://iwin888.com/">IWIN88</a></li>
-                        <li><a href="https://iwin888.com/https://iwin888.com/">CHÍNH SÁCH BẢO MẬT</a></li>
-                        <li><a href="https://iwin888.com/https://iwin888.com/">MIỄN TRỪ TRÁCH NHIỆM</a></li>
+                <div class="col-4 text-center  A"> <a href="https://iwin88789.com/"><img src="./img/logo/logo.png" alt=""></a></div>
+                <div class="col-8 B text-center  ">
+                    <ul class="ul pt-2 ">
+                        <li><a href="https://iwin88789.com/">IWIN88</a></li>
+                        <li><a href="https://iwin88789.com/">CHÍNH SÁCH BẢO MẬT</a></li>
+                        <li><a href="https://iwin88789.com/">MIỄN TRỪ TRÁCH NHIỆM</a></li>
                     </ul>
                     <span style="font-size:30px;cursor:pointer;color:white;" onclick="openNav()" class="mm">&#9776;</span>
                 </div>
-            </div>https://iwin888.com/https://iwin888.com/
+            </div>
                 <div id="myNav" class="overlay">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <div class="overlay-content">
-                    <a href="https://iwin888.com/">IWIN88</a>
-                    <a href="https://iwin888.com/">CHÍNH SÁCH BẢO MẬT</a>
-                    <a href="https://iwin888.com/">MIỄN TRỪ TRÁCH NHIỆM</a>
+                    <a href="https://iwin88789.com/">IWIN88</a>
+                    <hr>
+                    <a href="https://iwin88789.com/">CHÍNH SÁCH BẢO MẬT</a>
+                    <hr>
+                    <a href="https://iwin88789.com/">MIỄN TRỪ TRÁCH NHIỆM</a>
+                    <hr>
                     </div>
                 </div>
         </div>
@@ -109,31 +112,31 @@
                 <div class="col-3 cm bg-danger">
                     <div class="col-12 mt-3"><strong class="bai">BÀI MỚI</strong></div>
                     <div class="col-12 bl2">
-                       <a href="https://iwin888.com/"> <img src="./img/slide/11.png" alt=""></a>
+                       <a href="https://iwin88789.com/"> <img src="./img/slide/11.png" alt=""></a>
                     </div>
                     <div class="col-12 bl2">
-                       <a href="https://iwin888.com/"> <img src="./img/blog-1/32.jpg" alt=""></a>
+                       <a href="https://iwin88789.com/"> <img src="./img/blog-1/32.jpg" alt=""></a>
                     </div>
                     <div class="col-12 bl2">
-                        <a href="https://iwin888.com/"><img src="./img/blog-1/16.jpg" alt=""></a>
+                        <a href="https://iwin88789.com/"><img src="./img/blog-1/16.jpg" alt=""></a>
                     </div>
                     <div class="col-12 bl2">
-                        <a href="https://iwin888.com/"><img src="./img/blog-1/22.jpg" alt=""></a>
+                        <a href="https://iwin88789.com/"><img src="./img/blog-1/22.jpg" alt=""></a>
                     </div>
                     <div class="col-12 bl2">
-                        <a href="https://iwin888.com/"><img src="./img/blog-1/34.jpg" alt=""></a>
+                        <a href="https://iwin88789.com/"><img src="./img/blog-1/34.jpg" alt=""></a>
                     </div>
                     <div class="col-12 bl2">
-                        <a href="https://iwin888.com/"><img src="./img/blog-1/13.jpg" alt=""></a>
+                        <a href="https://iwin88789.com/"><img src="./img/blog-1/13.jpg" alt=""></a>
                     </div>
                     <div class="col-12 bl2">
-                        <a href="https://iwin888.com/"><img src="./img/blog-1/18.jpg" alt=""></a>
+                        <a href="https://iwin88789.com/"><img src="./img/blog-1/18.jpg" alt=""></a>
                     </div>
                     <div class="col-12 bl2">
-                        <a href="https://iwin888.com/"><img src="./img/blog-1/12.jpg" alt=""></a>
+                        <a href="https://iwin88789.com/"><img src="./img/blog-1/12.jpg" alt=""></a>
                     </div>
                     <div class="col-12 bl2">
-                        <a href="https://iwin888.com/"><img src="./img/blog-1/21.jpg" alt=""></a>
+                        <a href="https://iwin88789.com/"><img src="./img/blog-1/21.jpg" alt=""></a>
                     </div>
                 </div>
                 <!-- //block 3 -->
@@ -146,17 +149,17 @@
                             </div>
                             <div class="col-4 footer G">
                                 <p><strong>- CHÍNH SÁCH</strong></p>
-                                <p><a href="https://iwin888.com/"> Miễn Trừ Trách Nhiệm</a></p>
-                                <p><a href="https://iwin888.com/"> Chính Sách Bảo Mật</a></p>
+                                <p><a href="https://iwin88789.com/"> Miễn Trừ Trách Nhiệm</a></p>
+                                <p><a href="https://iwin88789.com/"> Chính Sách Bảo Mật</a></p>
                             </div>
                             <div class="col-4 footer">
                                 <div class="col-12"><p><strong>- SHARE</strong></p></div>
-                                <div class="col-12 logo_under"><a href="https://iwin888.com/"><img src="./img/logo/logo.png" alt=""></a></div>
+                                <div class="col-12 logo_under"><a href="https://iwin88789.com/"><img src="./img/logo/logo.png" alt=""></a></div>
                                 <div class="col-12 m-3">
                                     <div class="row">
-                                       <div class="col-2 logo_img"><a href="https://iwin888.com/"><img src="./img/logo/logofb.png" alt=""></a></div>
-                                       <div class="col-2 logo_img"> <a href="https://iwin888.com/"><img src="./img/logo/logo swtter1.png" alt=""></a></div>
-                                       <div class="col-2 logo_img"><a href="https://iwin888.com/"><img src="./img/logo/logo email.png" alt=""></a></div>
+                                       <div class="col-2 logo_img"><a href="https://www.facebook.com/iwin88.games"><img src="./img/logo/logofb.png" alt=""></a></div>
+                                       <div class="col-2 logo_img"> <a href="https://iwin88789.com/"><img src="./img/logo/logo swtter1.png" alt=""></a></div>
+                                       <div class="col-2 logo_img"><a href="https://iwin88789.com/"><img src="./img/logo/logo email.png" alt=""></a></div>
                                     </div>
                                 </div>
                             </div>
